// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicProjectsListPage renders with a proper list of projects when published 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-4"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-5"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Projects
        </h1>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiTableContainer-root"
        >
          <table
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Name
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Type
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Permits
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Coordinator Agency
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Start Date
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  End Date
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Completion Status
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
              data-testid="project-table"
            >
              <tr
                class="MuiTableRow-root"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-body"
                  role="cell"
                  scope="row"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiLink-button MuiTypography-body2 MuiTypography-colorPrimary"
                    data-testid="Project 1"
                  >
                    Project 1
                  </button>
                </th>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  project type
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  1, 2, 3
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  coordinator agency
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                />
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                />
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  <div
                    class="MuiChip-root makeStyles-chip-1 MuiChip-sizeSmall"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall"
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectsListPage renders with a proper list of projects when unpublished 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-10"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-11"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1"
        >
          Projects
        </h1>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiTableContainer-root"
        >
          <table
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Name
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Type
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Permits
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Coordinator Agency
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Start Date
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  End Date
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head"
                  scope="col"
                >
                  Completion Status
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
              data-testid="project-table"
            >
              <tr
                class="MuiTableRow-root"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-body"
                  role="cell"
                  scope="row"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiLink-button MuiTypography-body2 MuiTypography-colorPrimary"
                    data-testid="Project 1"
                  >
                    Project 1
                  </button>
                </th>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  project type
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  1, 2, 3
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  coordinator agency
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                />
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                />
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  <div
                    class="MuiChip-root makeStyles-chip-7 MuiChip-sizeSmall"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelSmall"
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
